<resources>
    <string name="app_name">SkinMate</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicodingin aja!</string>
    <string name="title_welcome_page">Selamat datang di SkinMate!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="copyright">© 2021 Dicoding</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="title_home">Home</string>
    <string name="title_camera">Camera</string>
    <string name="title_profile">Profile</string>
    <string name="email_error">Email Tidak Sesuai</string>
    <string name="add_story">Add Story</string>
    <string name="messageMedia">Pilih opsi di bawah ini</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="process_citra">Process Citra</string>
    <string name="profile_pictrue">profile pictrue</string>
    <string name="full_name_here">Full Name Here</string>
    <string name="bantuan">Bantuan</string>
    <string name="example1234_email_com">example1234@email.com</string>
    <string name="button_help">button help</string>
    <string name="tanya_jawab">Tanya Jawab</string>
    <string name="about_us">Tentang Skin Mate</string>
    <string name="report_us">Laporkan Masalah</string>
    <string name="log_out">keluar</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="error_email">Email tidak sesuai</string>
    <string name="error_password">Password tidak sesuai</string>
    <string name="min_length">Minimal %1$d karakter</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="user_example">User Example</string>
    <string name="blog_title">Blog Title</string>
    <string name="blog_description">Blog Description</string>
    <string name="blog_image">Blog Image</string>
    <string name="made_with">Made With ❤</string>
    <string name="hint_email_login">Enter your valid email</string>
    <string name="hint_password_login">Enter your password</string>
    <string name="desc_login">Let\'s Start with Your Account!</string>
    <string name="already">Already have an account?</string>
    <string name="doesnt">Doesn\'t have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_your_account_here">Create Your Account Here</string>

    <string-array name="data_title">
        <item>5 Tips Menjaga Kesehatan Kulit, Mudah dan Sederhana</item>
        <item>Menjaga Kesehatan Kulit dengan Workout</item>
        <item>Cara Tepat Menjaga Kelembapan Alami Kulit</item>
        <item>4 Jenis Salep Jamur Kulit untuk Redakan Gejala</item>
        <item>7 Langkah Perawatan Wajah Berjerawat yang Perlu Diketahui</item>
    </string-array>

    <string-array name="data_description">
        <!--        Blog 1-->
        <item>Menjaga kecantikan dan kesehatan kulit menjadi suatu keharusan yang perlu diperhatikan oleh setiap orang. Mengapa demikian Sebagai organ tubuh terluar, kulit terpapar langsung dengan kotoran atau bakteri yang bisa mengganggu kesehatan yang lebih serius. Semua orang pasti menginginkan kulit yang sehat.
        </item>
        <!--        Blog 2-->
        <item>Menjaga kesehatan kulit sejak dini itu penting, sehingga di masa tua nanti kulit tetap terjaga dan sehat. Tidak perlu perawatan yang mahal, Anda bisa melakukan workout rutin untuk menjaga kesehatan kulit Anda. Berikut diantarana manfaat workout secara rutin untuk kesehatan kulit.</item>
        <!--        Blog 3-->
        <item>Cara yang bisa dilakukan agar kulit bisa tetap sehat dan terlihat terawat adalah menjaga kelembapan alaminya Kulit yang kehilangan kelembapan alaminya lebih rentan mengalami munculnya garis-garis halus dan kerutan. Lantas, bagaimana cara tepat menjaga kelembapan alami kulit?</item>
        <!--        Blog 4-->
        <item>Infeksi jamur merupakan penyakit kulit yang umum terjadi. Pasalnya, ada jutaan spesies jamur yang bisa ditemukan di lingkungan sekitar kita. Seperti di tanah, tanaman, permukaan perabot rumah, bahkan di kulit. Nah, beberapa dari mereka bisa menyebabkan infeksi kulit dengan gejala yang mengganggu.</item>
        <!--        Blog 5-->
        <item>Jerawat umumnya dialami remaja yang sedang pubertas dan siapa pun yang memiliki tipe kulit wajah berminyak. Tidak hanya di wajah, jerawat juga bisa muncul di bagian tubuh lain, seperti punggung, dada, atau leher.</item>
    </string-array>
    <integer-array name="data_photo">
        <item>@drawable/blog1</item>
        <item>@drawable/blog2</item>
        <item>@drawable/blog3</item>
        <item>@drawable/blog4</item>
        <item>@drawable/blog5</item>
    </integer-array>

</resources>