<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.ui.fragment.media.MediaFragment"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="2000dp">

        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:contentDescription="@string/add_story"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_place_holder" />


        <LinearLayout
            android:id="@+id/group_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/mainBG"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/previewImageView">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/messageMedia"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"/>


            <LinearLayout
                android:id="@+id/group_media"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp">

                <Button
                    android:id="@+id/btn_camera"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:paddingVertical="10dp"
                    android:backgroundTint="@color/navi"
                    android:drawableTop="@drawable/baseline_camera_alt_24"
                    android:text="@string/camera" />

                <Button
                    android:id="@+id/btn_gallery"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/gallery"
                    android:paddingVertical="10dp"
                    android:backgroundTint="@color/navi"
                    android:drawableTop="@drawable/ic_place_holder_white"/>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/process_citra"
            app:layout_constraintEnd_toEndOf="@+id/previewImageView"
            app:layout_constraintStart_toStartOf="@+id/previewImageView"
            app:layout_constraintTop_toBottomOf="@id/group_button" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="Hasil Proses Citra"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_upload" />

        <TextView
            android:id="@+id/resultMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="Penyakit yang terdeteksi :"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="10sp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/blue_700"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/resultMessage"
            app:layout_constraintTop_toBottomOf="@+id/message" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible"
            android:visibility="invisible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
